--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/datetimepicker": "^7.4.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
@@ -18,13 +19,16 @@
     "babel-preset-expo": "^9.2.0",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "^0.20.4",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.14",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
